--- a/templates/devices.html
+++ b/templates/devices.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
+    <title>Device list</title>
 </head>
 <body>
-    <p><a href="train">Train model</a></p>
-    <p><a href="devices">Select device</a></p>
-    <p><a href="dataviz">View live channel data</a></p>
+    <p><a>Add new bluetooth device</a></p>
+    <p>Show list of devices from DB here</p>
 </body>
 </html>
