--- a/templates/login.html
+++ b/templates/login.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
+    <title>Login Page</title>
 </head>
 <body>
-    <p><a href="train">Train model</a></p>
-    <p><a href="devices">Select device</a></p>
-    <p><a href="dataviz">View live channel data</a></p>
+    <p><a href="home">To home (index)</a></p>
 </body>
 </html>
