--- a/templates/train.html
+++ b/templates/train.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
+    <title>Train model</title>
 </head>
 <body>
-    <p><a href="train">Train model</a></p>
-    <p><a href="devices">Select device</a></p>
-    <p><a href="dataviz">View live channel data</a></p>
+    <button class="button">Start recording</button>
+    <button class="button">Stop recording</button>
+    <p><a href="home">Done training</a></p>
 </body>
 </html>
